[package]
name = "transcoding-server"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.1", features = ["macros", "multipart", "json"] }
axum-extra = "0.4.0"
tower-http = { version = "0.3.0", features = ["cors", "trace"] }
tokio = { version = "1.24.2", features = ["full"] }
tokio-util = { version = "0.7.4", features = ["io"]}
infer = "0.12.0"
tempfile = "3.3.0"
blurhash = "0.1.1"
todo-or-die = { version = "0.1.2", features = ["github"] }
serde = "1.0.152"
image = "0.24.5"

# Transcoding
ffmpeg-cli = "0.1.0"
magick_rust = { version = "0.17.0", optional = true }

# Logging
metrics = "0.18"
metrics-exporter-prometheus = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenAPI
aide = { version = "0.9.0", features = [
    "redoc",
    "axum",
    "axum-extra",
    "macros",
] }
axum-jsonschema = { version = "0.5.0", features = [
    "aide",
] }

[features]
default = ["imagemagick"]
imagemagick = ["dep:magick_rust"]